2004-09-24  Derek Price <derek@ximbiot.com>

	* sanity.sh (parseroot2): Use remoteonly.

2004-09-24  Derek Price <derek@ximbiot.com>

	* sanity.sh (tests): Add parseroot2.

2004-09-24  Derek Price <derek@ximbiot.com>

	* recurse.c (do_recursion, do_dir_proc): Make process_this_directory a
	boolean.

2004-09-24  Derek Price <derek@ximbiot.com>

	* sanity.sh (parseroot2): New test for root parsing consistency.
	(Original patch from Alexander Taler <dissent@cvshome.org>.)

	* cvs.h (Name_Root, free_cvsroot_t, parse_cvsroot, local_cvsroot,
	Create_Root, root_allow_add, root_allow_free, root_allow_ok): Move
	these protos to...
	* root.h: ...here.
	* client.c (arg_should_not_be_sent_to_server), recurse.c
	(start_recusrion, do_recursion): Use new Name_Root API.
	* main.c (current_root): Remove global.
	(set_root_directory): Set current_parsed_root directly.
	(main): Use new Name_Root API.  Restore deletion of root directories
	list.
	* root.c (Name_Root): Return a parsed cvsroot_t rather than a string.

2004-09-24  Mark D. Baushke  <mdb@cvshome.org>

	* buffer.c (buf_append_buffer): Fix typo in comment.

2004-09-23  Mark D. Baushke  <mdb@cvshome.org>

	* buffer.c (buf_read_file): Fix typo in comment.
	(buf_read_file_to_eof): Ditto.
	* server.c (serve_command_prep): Ditto.

2004-09-23  Derek Price <derek@ximbiot.com>

	* sanity.sh (depends_on_ssh, sshstdio): Don't use skip() to skip
	remote-only tests.

2004-09-23  Derek Price <derek@ximbiot.com>

	* sanity.sh (crerepos, sshstdio): Minor modifications to make use of
	the new depends_on_?sh API.

2004-09-23  Derek Price <derek@ximbiot.com>

	* sanity.sh: Accept new -e option to interpret non-fatal calls to skip
	as errors.
	(skip, depends_on_rsh, depends_on_ssh): New functions.

2004-09-23  Mark D. Baushke  <mdb@cvshome.org>

	* server.c (cvs_output, cvs_output_binary): fflush (stderr)
	here to avoid problems with 'cvs status 2>&1'.
	(Report by Frank Hemer <frank@hemer.org>.)

2004-09-17  Derek Price  <derek@ximbiot.com>
